# ExamSystem

./: CMakeLists.txt  account.txt  exam.txt  examdialog.cpp  examdialog.h  examdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h
